[gd_scene load_steps=6 format=3 uid="uid://b8a63i61bowb2"]

[ext_resource type="Script" path="res://generate_button.gd" id="1_8m81h"]
[ext_resource type="Script" path="res://generator.gd" id="2_ef83v"]
[ext_resource type="Script" path="res://variable_screen.gd" id="2_wa36u"]

[sub_resource type="Gradient" id="Gradient_ns5lt"]
colors = PackedColorArray(0.75, 0.75, 0.75, 1, 0.5, 0.5, 0.5, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g7g68"]
gradient = SubResource("Gradient_ns5lt")
width = 1920
height = 1080
fill_to = Vector2(0, 1)

[node name="Main" type="Node2D"]

[node name="MainCamera" type="Camera2D" parent="."]

[node name="Background" type="TextureRect" parent="MainCamera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_g7g68")

[node name="Generator" type="Node2D" parent="."]
script = ExtResource("2_ef83v")

[node name="VariableScreen" type="ColorRect" parent="."]
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
color = Color(0, 0, 0, 0.74902)
script = ExtResource("2_wa36u")

[node name="CircleCount" type="HSlider" parent="VariableScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -440.0
offset_right = 128.0
offset_bottom = -408.0
grow_horizontal = 2
grow_vertical = 0
min_value = 1.0
max_value = 25.0
value = 8.0
rounded = true

[node name="Label" type="Label" parent="VariableScreen/CircleCount"]
layout_mode = 0
offset_top = -30.0
offset_right = 256.0
offset_bottom = 2.0
text = "Circle Count"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MinCirclePoints" type="HSlider" parent="VariableScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -370.0
offset_right = 128.0
offset_bottom = -338.0
grow_horizontal = 2
grow_vertical = 0
min_value = 12.0
max_value = 24.0
value = 16.0
rounded = true

[node name="Label" type="Label" parent="VariableScreen/MinCirclePoints"]
layout_mode = 0
offset_top = -30.0
offset_right = 256.0
offset_bottom = 2.0
text = "Min Circle Points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaxCirclePoints" type="HSlider" parent="VariableScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -290.0
offset_right = 128.0
offset_bottom = -258.0
grow_horizontal = 2
grow_vertical = 0
min_value = 32.0
max_value = 48.0
value = 32.0
rounded = true

[node name="Label" type="Label" parent="VariableScreen/MaxCirclePoints"]
layout_mode = 0
offset_top = -30.0
offset_right = 256.0
offset_bottom = 2.0
text = "Max Circle Points"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropletBloom" type="HSlider" parent="VariableScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -210.0
offset_right = 128.0
offset_bottom = -178.0
grow_horizontal = 2
grow_vertical = 0
min_value = 0.5
max_value = 5.0
step = 0.0
value = 2.0
exp_edit = true

[node name="Label" type="Label" parent="VariableScreen/DropletBloom"]
layout_mode = 0
offset_top = -30.0
offset_right = 256.0
offset_bottom = 2.0
text = "Droplet Bloom"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Chaos" type="HSlider" parent="VariableScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -130.0
offset_right = 128.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 0
min_value = 2.0
step = 0.0
value = 3.0
exp_edit = true

[node name="Label" type="Label" parent="VariableScreen/Chaos"]
layout_mode = 0
offset_top = -30.0
offset_right = 256.0
offset_bottom = 2.0
text = "Chaos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GenerateButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.0
offset_top = 460.0
offset_right = 49.0
offset_bottom = 492.0
grow_horizontal = 2
grow_vertical = 0
text = "Open/Close"
icon_alignment = 1
script = ExtResource("1_8m81h")
